--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,24 @@
+@import url(nreset.css);
+
 body {
-  background-color: #313131;
+  font-family: 'Roboto', sans-serif;
+}
+
+.content {
+  height: 100vh;
+  width: 100vw;
+}
+
+.content__weather {
+  height: 100%;
+  width: 100%;
+}
+
+.weather__default {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 50%;
+  justify-content: center;
+  width: 100%;
 }
