--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,6 +4,12 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+form {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
 .content {
   height: 100vh;
   width: 100vw;
