--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,8 +8,8 @@ button:hover {
   cursor: pointer;
 }
 
-.button--edit,
-.button--temperature {
+.button--location--change,
+.button--temperature--scales {
   background: none;
   border: none;
 }
@@ -96,7 +96,7 @@ form {
   font-weight: bold;
 }
 
-.temperature__text {
+.scales__text__primary {
   font-size: 2.5rem;
   font-weight: bold;
 }
