--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,7 +9,7 @@ button:hover {
 }
 
 .button--location--change,
-.button--temperature--scales {
+.button--temperature--symbol {
   background: none;
   border: none;
 }
@@ -91,12 +91,20 @@ form {
   flex-direction: column;
 }
 
+.card__misc span {
+  margin-right: 0.25em;
+}
+
+.humidity__number {
+  margin-right: unset !important;
+}
+
 .temperature__number {
   font-size: 5rem;
   font-weight: bold;
 }
 
-.scales__text__primary {
+.symbol__text__primary {
   font-size: 2.5rem;
   font-weight: bold;
 }
