--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -139,7 +139,7 @@ input[type='radio']:hover {
   font-weight: bold;
 }
 
-.symbol__text__primary {
+.symbol__text {
   font-size: 2.5rem;
   font-weight: bold;
 }
