--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,13 @@
 @import url(nreset.css);
 
+.--fade--in {
+  animation: fade-in 1s ease-in forwards;
+}
+
+.--fade--out {
+  animation: fade-out 1s ease-out forwards;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
 }
@@ -16,7 +24,7 @@ button:hover {
   width: 5em;
 }
 
-.button--location--change,
+.button--location--edit,
 .button--temperature--symbol {
   background: none;
   border: none;
@@ -28,6 +36,28 @@ button:hover {
   flex-direction: column;
   height: 100%;
   justify-content: space-evenly;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    visibility: hidden;
+  }
+  to {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+    visibility: visible;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 
 .label--celsius:hover,
@@ -45,19 +75,23 @@ button:hover {
   width: 8em;
 }
 
+.img--logo {
+  height: auto;
+  width: 8em;
+}
+
 input[type='radio']:hover {
   cursor: pointer;
 }
 
 .input--location {
-  border: 0.1em solid transparent;
-  box-shadow: inset 0 0 1em 0px #31313131;
+  border: none;
+  border-bottom: 0.15em solid #f5cac3;
   height: 2em;
   width: 25em;
 }
 
 .input--location:focus {
-  border: 0.1em solid #1c87c9;
   outline: none;
 }
 
@@ -146,15 +180,35 @@ input[type='radio']:hover {
 
 .body__overlay {
   align-items: center;
+  background: white;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   height: 100%;
   position: absolute;
   width: 100%;
 }
 
+.overlay__information {
+  align-items: center;
+  display: flex;
+}
+
+.overlay__information .title__text {
+  font-size: 3.5rem;
+}
+
 .overlay__option {
   height: 65%;
+}
+
+.location__error {
+  color: red;
+  display: none;
+  text-align: center;
+}
+
+.location__error--active {
+  display: block;
 }
 
 .option__symbol {
