Add the ability to load different versions of the page when the user's location is saved

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,14 @@
   animation: fade-out 0.3s ease-out forwards;
 }
 
+.--visibility--hidden {
+  visibility: hidden;
+}
+
+.--visibility--visible {
+  visibility: visible;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
 }
