--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,17 @@
 @import url(nreset.css);
 
+.--display--block {
+  display: block !important;
+}
+
+.--display--flex {
+  display: flex !important;
+}
+
+.--display--none {
+  display: none !important;
+}
+
 .--fade--in {
   animation: fade-in 0.9s ease-in forwards;
 }
@@ -30,6 +42,19 @@ button:hover {
   border-radius: 1em;
   height: 2em;
   width: 5em;
+}
+
+.button--cancel:hover {
+  opacity: 0.8;
+}
+
+.button--search {
+  background: #58a6ff;
+  color: white;
+}
+
+.button--search:hover {
+  opacity: 0.8;
 }
 
 .button--location--edit,
@@ -65,6 +90,17 @@ button:hover {
   to {
     opacity: 0;
     visibility: hidden;
+  }
+}
+
+@keyframes loader {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 -1em 0 -1em;
+  }
+  40% {
+    box-shadow: 0 -1em 0 0;
   }
 }
 
@@ -172,6 +208,10 @@ input[type='radio']:hover {
   margin-right: 0.25em;
 }
 
+.feels__number {
+  margin-right: unset !important;
+}
+
 .humidity__number {
   margin-right: unset !important;
 }
@@ -203,6 +243,50 @@ input[type='radio']:hover {
 
 .overlay__information .title__text {
   font-size: 3.5rem;
+}
+
+.button__load {
+  align-items: flex-end;
+  display: none;
+  justify-content: center;
+  height: 2em;
+  margin-top: 0.5em;
+  width: 5em;
+}
+
+.load__loader::before,
+.load__loader,
+.load__loader::after {
+  animation: loader 2s ease-in-out infinite;
+  border-radius: 50%;
+  height: 1em;
+  width: 1em;
+}
+
+.load__loader {
+  -moz-animation-delay: -0.5s;
+  -webkit-animation-delay: -0.5s;
+  animation-delay: -0.5s;
+  color: #58a6ff;
+  display: block;
+  position: relative;
+}
+
+.load__loader::after,
+.load__loader::before {
+  content: '';
+  position: absolute;
+}
+
+.load__loader::after {
+  -moz-animation-delay: -1s;
+  -webkit-animation-delay: -1s;
+  animation-delay: -1s;
+  right: 1.2em;
+}
+
+.load__loader::before {
+  left: 1.2em;
 }
 
 .overlay__option {
